UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_NPR_Volume__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Throughput__c</fullName>
        <label>Actual Throughput $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Throughput_per__c</fullName>
        <label>Actual Throughput %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Awarded_Quantity__c</fullName>
        <formula>( Phoenix_NPR_Data__r.Phoenix_Awarded_Quantity__c )/12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Awarded Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Actual_Sales__c</fullName>
        <label>Actual Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract__c</fullName>
        <formula>IF(ISBLANK( Phoenix_NPR_Data__c ), &apos;&apos;, HYPERLINK(&quot;/lightning/r/&quot;+ Phoenix_NPR_Data__r.Phoenix_Contract__r.Id
  +&quot;/view?fv0=&quot;,Phoenix_NPR_Data__r.Phoenix_Contract__r.Name))</formula>
        <label>Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer__c</fullName>
        <formula>IF(ISBLANK( Phoenix_NPR_Data__c ), &apos;&apos;, HYPERLINK(&quot;/lightning/r/&quot;+ Phoenix_NPR_Data__r.Phoenix_Contract__r.Phoenix_Customer__r.Id
  +&quot;/view?fv0=&quot;, Phoenix_NPR_Data__r.Phoenix_Contract__r.Phoenix_Customer__r.Name ))</formula>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Dead_Net_Price__c</fullName>
        <label>Dead Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Month__c</fullName>
        <formula>CASE(MONTH( Phoenix_Date__c ),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot; &quot;)+&quot;-&quot; +RIGHT(TEXT(YEAR( Phoenix_Date__c  )) , LEN(TEXT(YEAR( Phoenix_Date__c  )))  - 2)</formula>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NPR_Data__c</fullName>
        <label>NPR Data</label>
        <referenceTo>Phoenix_NPR_Data__c</referenceTo>
        <relationshipLabel>NPR Volumes</relationshipLabel>
        <relationshipName>NPR_Volumes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product__c</fullName>
        <formula>IF(ISBLANK( Phoenix_NPR_Data__c ), &apos;&apos;, HYPERLINK(&quot;/lightning/r/&quot;+  Phoenix_NPR_Data__r.Phoenix_Product__r.Id
+&quot;/view?fv0=&quot;,Phoenix_NPR_Data__r.Phoenix_Product__r.Name))</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Throughput_Cost__c</fullName>
        <label>Throughput Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Unique_Identifier_SF__c</fullName>
        <formula>Phoenix_NPR_Data__r.Phoenix_Contract__r.Phoenix_Contract_Number__c +&quot;_&quot;+ Phoenix_NPR_Data__r.Phoenix_Material_Number__c +&quot;_&quot;+CASE(MONTH( Phoenix_Date__c ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot; &quot;)+&quot;_&quot; +TEXT(YEAR( Phoenix_Date__c )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Identifier SF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Volume__c</fullName>
        <label>Volume</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Contracted_Quantity__c</fullName>
        <formula>( Phoenix_Volume__c / Monthly_Awarded_Quantity__c )* 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Contracted Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>NPR Volume</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_NPR_Data__c</columns>
        <columns>Phoenix_Contract__c</columns>
        <columns>Phoenix_Product__c</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Phoenix_Month__c</columns>
        <columns>Phoenix_Volume__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>NPR Volume Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPR Volumes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>